# ASEN-5519-Final-Project

./: .gitignore  CMakeLists.txt  MyPlanner.cpp  MyPlanner.h  MySampler.cpp  MySampler.h  Notes.txt  main.cpp  readme.md  todo.md
configs/: generate_config.py  w0.yaml  w1.yaml  w2.yaml  w3.yaml  w4.yaml  w5.yaml  w6.yaml
include/: MyFunctions.h  MyPlanner.h
report/: benchmark.db  ompl_benchmark_statistics.py  todo.md  w1_benchmark.db  w2_benchmark.db  w3_benchmark.db
solutions/: sol_20211128172845.txt  solution.txt  solution_simplified.txt
solutions/geometric/: sol_20211128173519.txt  sol_20211129175939.txt  sol_20211129184638.txt  sol_20211129185209.txt  sol_20211129185506.txt  sol_20211129185510.txt  sol_20211129185609.txt  sol_20211129185827.txt  sol_20211129190051.txt  sol_20211129190204.txt  sol_20211129190207.txt  sol_20211129191403.txt  sol_20211129191535.txt  sol_20211129191540.txt  sol_20211129191541.txt  sol_20211129191542.txt  sol_20211129191543.txt  sol_20211129191544.txt  sol_20211129191545.txt  sol_20211129191546.txt  sol_20211129200953.txt  sol_20211129201124.txt  sol_20211129201634.txt  sol_20211129202057.txt  sol_20211129204949.txt  sol_20211129205102.txt  w1_20211130175855.txt  w1_20211130175859.txt  w1_20211210154341.txt  w1_20211210160453.txt  w1_20211210172003.txt  w1_20211211142826.txt  w2_20211210154344.txt  w2_20211210160456.txt  w2_20211210171959.txt  w2_20211211142829.txt  w3_20211210105942.txt  w3_20211210131949.txt  w3_20211210154347.txt  w3_20211210160458.txt  (+23 more)
solutions/kinodynamic/: sol_20211128173554.txt  sol_20211129205024.txt  w0_0_20211209134712.txt  w0_1_20211209134712.txt  w0_20211208205253.txt  w0_20211208205306.txt  w0_20211208205307.txt  w0_2_20211209134717.txt  w0_5_20211209134738.txt  w0_6_20211209134738.txt  w1_20211130182741.txt  w1_20211205211913.txt  w1_20211205212723.txt  w1_20211206210052.txt  w1_20211206211846.txt  w1_20211206212018.txt  w1_20211207110313.txt  w1_20211207110406.txt  w1_20211207110414.txt  w1_20211207130358.txt  w1_20211210135328.txt  w1_20211210154109.txt  w1_20211211143737.txt  w2_0_20211214140420.txt  (+49 more)
src/: MyFunctions.cpp  MyPlanner.cpp  benchmark.cpp  geometric.cpp  kinodynamic.cpp  main.cpp
visualization/: cuboid.m  make_movie.m  make_movie_side.m  make_movie_topdown.m  online_plotting.m  plot_goal.m  plot_obstacles.m  plot_orientation.m  plot_position.m  plot_robot.m  plot_states.py  plot_trajectory.m  plotting.ipynb  plotting.m  plotting.py  test.ipynb
(+93 files in other folders)
